--- a/DrawTheLogo.css
+++ b/DrawTheLogo.css
@@ -2,7 +2,7 @@
   background-color: rgb(240, 240, 240);
   margin: auto;
   height: 100vh;
-0
+
 }
 
 
@@ -11,15 +11,15 @@
 .center-screen {
   background-color: white;
     margin: auto;
-    width: 1810px;
-    height: 1890px;
+    width: 845px;
+    height: 100vh;
     padding: 10px;
   }
 
 
 .title {
-  font-family: cursive ;
-  font-size: 70px ;
+font-family: cursive;
+  font-size: 35px ;
   font-weight: bold ;
   text-align:center ;
   margin-top: 10px;
@@ -32,10 +32,11 @@
 
 }
 .canvas {
-  width : 880px;
-  height:880px;
+  width : 410px;
+  height:410px;
   margin-top:10px;
 background-color: white;
+
 float: left;
 border-color:black;
 border-style: solid;
@@ -45,8 +46,8 @@ border-radius: 30px;
 
 }
 .image-holder {
-  width:880px;
-  height:880px;
+  width:410px;
+  height:410px;
   margin-top: 10px;
 background-color: white;
 float:right;
@@ -57,16 +58,17 @@ border-radius: 30px;
 
 }
 .done-button {
+  font-family: cursive;
   background-color: white;
   color: rgb(77, 2, 77);
   border-color: rgb(77, 2, 77);
   border-style:solid;
-  border-width: 5px;
-  height: 80px;
-  width: 160px;
+  border-width: 2px;
+  height: 40px;
+  width: 80px;
 border-radius: 50px;
 font-weight: bold ;
-font-size:20px ;
+font-size:18px ;
 cursor:pointer ;
 margin-top: 8px;
 transition: box-shadow 0.15s;
