--- a/DrawTheLogo.css
+++ b/DrawTheLogo.css
@@ -1,87 +1,63 @@
-.main-screen{
-  background-color: rgb(240, 240, 240);
-  margin: auto;
-  height: 100vh;
-
-}
-
-
-
-
-.center-screen {
-  background-color: white;
-    margin: auto;
-    width: 845px;
-    height: 100vh;
-    padding: 10px;
-  }
-
-
-.title {
-font-family: cursive;
+#title{
+  font-family: cursive;
   font-size: 35px ;
   font-weight: bold ;
   text-align:center ;
   margin-top: 10px;
   margin-bottom: 10px;
-
-}     
- .logo {
-  width:200px ;
-
-
 }
-.canvas {
+#main-screen{
+    background-color: rgb(240, 240, 240);
+    margin: auto;
+    height: 100vh;
+  
+}
+
+#center-screen{
+  background-color: white;
+  margin: auto;
+  width: 845px;
+  height: 100vh;
+  padding: 10px;
+}
+
+
+
+
+#canvas-container {
+  display: flex;
+}
+
+#canvas {
   width : 410px;
   height:410px;
-  margin-top:10px;
 background-color: white;
-
+margin-right: 5px;
 float: left;
 border-color:black;
 border-style: solid;
-border-radius: 30px;
-
-
-
+border-radius: 25px;
 }
-.image-holder {
+
+#square {
   width:410px;
   height:410px;
-  margin-top: 10px;
-background-color: white;
+  margin-left: 5px;
+background-color: rgb(255, 255, 255);
 float:right;
 border-color: black;
 border-style: solid;
-border-radius: 30px;
-
-
+border-radius: 25px;
 }
-.done-button {
+
+#level{
+
   font-family: cursive;
-  background-color: white;
-  color: rgb(77, 2, 77);
-  border-color: rgb(77, 2, 77);
-  border-style:solid;
-  border-width: 2px;
-  height: 40px;
-  width: 80px;
-border-radius: 50px;
-font-weight: bold ;
-font-size:18px ;
-cursor:pointer ;
-margin-top: 8px;
-transition: box-shadow 0.15s;
-transition: background-color 0.15s,
-color 0.15s ;
+  font-size: 20px;
 }
 
-.done-button:active {
-  box-shadow: 5px 5px 10px rgba(0,0,0,0.15); 
-}
+#system {
 
-.done-button:hover{
-  background-color: rgb(77, 2, 77);
-  color: white;
+ font-family: initial;
+  font-size: 20px;
 }
-
